nullaway_error_2DEBA373-C409-4A86-B3D8-157F4D99C1DB.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/mvc/method/annotation/ReactiveTypeHandler.java:493: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				this.result.setResult(null);
				                      ^
    (see http://t.uber.com/nullaway )
